--- a/no.html
+++ b/no.html
@@ -9,7 +9,7 @@
 <body>
 	<div class="container">
 		<div class="yes">
-			<h2>I'll try again next time... :(</h2>
+			<h2>Uh... wrong answer you must've misclicked, try again please. </h2>
 			
 		</div>
 	</div>
